Partially update URL

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
   <meta name="twitter:card" content="summary_large_image" />
 
   {% if page.title == "Home" %}
-    <meta property="og:url" content="https://docs.tagtog.net" />
+    <meta property="og:url" content="https://docs.tagtog.com" />
     <meta property="og:title" content="tagtog documentation" />
     <meta property="og:description" content="This is the official documentation for tagtog, the text annotation tool to train AI. Available on the Cloud and On-Premises." />
     <meta property="twitter:title" content="tagtog documentation" />
