Change domain references to tagtog.com

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,7 +7,7 @@ id: introduction
 <div class="content">
   <div class="two-third-col">
     <h1>Welcome to tagtog</h1>
-    <p>This is the official documentation for {% include inline-image.html name="icon_leafs.png" width="18" %}<a href="https://www.tagtog.net" title="tagtog.net - The Text Annotation Tool to Train AI">tagtog</a>, an efficient text annotation tool ready to train AI. Available on the Cloud and on-Premises. <strong>Easy</strong>.</p>
+    <p>This is the official documentation for {% include inline-image.html name="icon_leafs.png" width="18" %}<a href="https://www.tagtog.com" title="tagtog.com - The Text Annotation Tool to Train AI">tagtog</a>, an efficient text annotation tool ready to train AI. Available on the Cloud and on-Premises. <strong>Easy</strong>.</p>
     <p>Below you can find a brief summary with the main features of tagtog and an overview of what you can achieve using this tool. For more in-depth information or tutorials, use the navigation to the left to explore our documentation.</p>
     <br>
 
@@ -181,7 +181,7 @@ id: introduction
       <h2>Cloud or OnPremises</h2>
       <table class="clean-table">
         <tr>
-          <td><strong>On the Cloud</strong>. To use tagtog on the cloud, <strong>you don't need to install anything</strong>; just <a href="https://www.tagtog.net/#signup" title="Sign up at tagtog.net">sign up</a>, create a project, and start annotating. Out of these annotations you can create and use a machine learning model without worrying about hardware requirements, databases, scalability, deployments and any other hassle or cost related to setting up a production environment and maintaining it.</td>
+          <td><strong>On the Cloud</strong>. To use tagtog on the cloud, <strong>you don't need to install anything</strong>; just <a href="https://www.tagtog.com/#signup" title="Sign up at tagtog.com">sign up</a>, create a project, and start annotating. Out of these annotations you can create and use a machine learning model without worrying about hardware requirements, databases, scalability, deployments and any other hassle or cost related to setting up a production environment and maintaining it.</td>
           <td class="centered" style="width:15%">{% include image.html name="tagtog_cloud.svg" %}</td>
         </tr>
         <tr>
@@ -266,7 +266,7 @@ id: introduction
             <td class="centered corpus">{% include image.html name="flybase.png" %}<span>FlyBase</span></td>
             <td class="centered corpus">{% include image.html name="rostlab_logo.png" %}<span>IDP4+</span></td>
             <td class="centered corpus">{% include image.html name="Virus300.jpg" %}<span>V300</span></td>
-            <td class="centered"><a href="https://www.tagtog.net/-datasets">Go to dataset full list</a></td>
+            <td class="centered"><a href="https://www.tagtog.com/-datasets">Go to dataset full list</a></td>
           </tr>
         </table>
       </div>
