--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
   <header>
     <div class="site-title">
       <a href="{{ site.app_url }}/">
-        <img class="logo" src="{{ site.baseurl }}/assets/img/circle_2leafstext.png" title="Go to web app at tagtog.net" alt="Go to web app at tagtog.net">
+        <img class="logo" src="{{ site.baseurl }}/assets/img/circle_2leafstext.png" title="Go to web app at tagtog.com" alt="Go to web app at tagtog.com">
       </a>
     </div>
     <div class="sidebar-search-engine-box">
